# flotilla

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE-MIT  README.md  example-workspace.yaml  rustfmt.toml
crates/cleat/: Cargo.toml  build.rs
crates/cleat/src/: cli.rs  da.rs  lib.rs  main.rs  protocol.rs  runtime.rs  server.rs  session.rs
crates/cleat/src/vt/: contracts.rs  ghostty.rs  ghostty_ffi.rs  mod.rs
crates/cleat/tests/: cli.rs  da.rs  lifecycle.rs  runtime.rs  vt.rs  vt_contracts.rs
crates/flotilla-client/: Cargo.toml
crates/flotilla-client/src/: lib.rs
crates/flotilla-client/src/lib/: tests.rs
crates/flotilla-controllers/: Cargo.toml
crates/flotilla-controllers/src/: lib.rs
crates/flotilla-controllers/src/actuators/: mod.rs
crates/flotilla-controllers/src/reconcilers/: checkout.rs  clone.rs  environment.rs  mod.rs  presentation.rs  task_workspace.rs  terminal_session.rs
crates/flotilla-controllers/tests/: actuators.rs  checkout_reconciler.rs  clone_reconciler.rs  environment_reconciler.rs  provisioning_in_memory.rs  task_workspace_reconciler.rs  terminal_session_reconciler.rs
crates/flotilla-controllers/tests/common/: mod.rs
crates/flotilla-core/: Cargo.toml
crates/flotilla-core/examples/: environment_checkout.rs  list_sessions.rs
crates/flotilla-core/src/: config.rs  convert.rs  daemon.rs  data.rs  delta.rs  environment_manager.rs  executor.rs  host_identity.rs  host_queries.rs  host_registry.rs  host_summary.rs  in_process.rs  issue_cache.rs  lib.rs  merge.rs  model.rs  path_context.rs  path_policy.rs  provider_data.rs  refresh.rs  repo_state.rs  resolve.rs  shpool_daemon.rs  step.rs  template.rs  terminal_manager.rs
crates/flotilla-core/src/agents/: hooks.rs  mod.rs  store.rs
crates/flotilla-core/src/attachable/: mod.rs  store.rs  types.rs
crates/flotilla-core/src/config/: tests.rs
crates/flotilla-core/src/data/: tests.rs
crates/flotilla-core/src/delta/: tests.rs
crates/flotilla-core/src/executor/: checkout.rs  session_actions.rs  terminals.rs  tests.rs  workspace.rs
crates/flotilla-core/src/hop_chain/: builder.rs  environment.rs  flatten.rs  mod.rs  remote.rs  resolver.rs  terminal.rs  tests.rs
crates/flotilla-core/src/in_process/: tests.rs
crates/flotilla-core/src/model/: tests.rs
crates/flotilla-core/src/providers/: correlation.rs  discovery.rs  github_api.rs  mod.rs  registry.rs  replay.rs  ssh_runner.rs  types.rs
crates/flotilla-core/src/refresh/: tests.rs
crates/flotilla-core/src/step/: tests.rs
crates/flotilla-core/src/terminal_manager/: tests.rs
crates/flotilla-core/tests/: in_process_daemon.rs
crates/flotilla-daemon/: Cargo.toml
crates/flotilla-daemon/src/: cli.rs  convoy_projection.rs  lib.rs  peer_networking.rs  runtime.rs  server.rs
crates/flotilla-daemon/src/peer/: channel_tests.rs  channel_transport.rs  manager.rs  merge.rs  mod.rs  ssh_transport.rs  test_support.rs  transport.rs
crates/flotilla-daemon/src/runtime/: test_git_repo.rs
crates/flotilla-daemon/src/server/: client_connection.rs  environment_sockets.rs  peer_connection.rs  peer_runtime.rs  remote_commands.rs  request_dispatch.rs  shared.rs  test_support.rs  tests.rs
crates/flotilla-daemon/tests/: convoy_projection.rs  multi_host.rs  peer_connect_flow.rs  request_session_pair.rs  socket_roundtrip.rs
crates/flotilla-protocol/: Cargo.toml
crates/flotilla-protocol/src/: arg.rs  commands.rs  delta.rs  environment.rs  framing.rs  host.rs  host_summary.rs  issue_query.rs  lib.rs  namespace.rs  output.rs  path_context.rs  peer.rs  provider_data.rs  provisioning_target.rs  qualified_path.rs  query.rs  snapshot.rs  step.rs  test_support.rs
crates/flotilla-protocol/src/lib/: tests.rs
crates/flotilla-resources/: Cargo.toml
crates/flotilla-resources/examples/: convoy_controller.rs  k8s_crud.rs  review-and-fix.yaml  validate_workflow.rs
crates/flotilla-resources/src/: backend.rs  checkout.rs  clone.rs  convoy.rs  environment.rs  error.rs  host.rs  in_memory.rs  lib.rs  placement_policy.rs  provisioning_identity.rs  resource.rs  status_patch.rs  task_workspace.rs  terminal_session.rs  watch.rs  workflow_template.rs
crates/flotilla-resources/src/controller/: mod.rs
crates/flotilla-resources/src/convoy/: reconcile.rs
crates/flotilla-resources/src/crds/: checkout.crd.yaml  clone.crd.yaml  convoy.crd.yaml  environment.crd.yaml  host.crd.yaml  placement_policy.crd.yaml  task_workspace.crd.yaml  terminal_session.crd.yaml  workflow_template.crd.yaml
crates/flotilla-resources/src/http/: bootstrap.rs  kubeconfig.rs  mod.rs
crates/flotilla-resources/tests/: controller_loop.rs  convoy_in_memory.rs  convoy_reconcile.rs  convoy_status_patch.rs  http_wire.rs  in_memory.rs  k8s_integration.rs  provisioning_http_wire.rs  provisioning_resources_in_memory.rs  provisioning_status_patch.rs  status_patch.rs  workflow_template_in_memory.rs  workflow_template_validation.rs
crates/flotilla-resources/tests/common/: contract.rs  mod.rs
crates/flotilla-session/: Cargo.toml
crates/flotilla-session/src/: cli.rs  lib.rs  main.rs  protocol.rs  runtime.rs  server.rs  session.rs
crates/flotilla-session/src/vt/: mod.rs  passthrough.rs
crates/flotilla-session/tests/: cli.rs  lifecycle.rs  runtime.rs  vt.rs
crates/flotilla-tui/: Cargo.toml
crates/flotilla-tui/examples/: splash-fixture.rs
crates/flotilla-tui/src/: binding_table.rs  cli.rs  event.rs  event_log.rs  keymap.rs  lib.rs  palette.rs  run.rs  segment_bar.rs  shared.rs  shimmer.rs  socket.rs  splash.rs  status_bar.rs  terminal.rs  theme.rs  ui.rs  ui_helpers.rs
crates/flotilla-tui/src/app/: executor.rs  file_picker.rs  intent.rs  issue_view.rs  key_handlers.rs  mod.rs  navigation.rs  test_builders.rs  test_support.rs  tests.rs  ui_state.rs
crates/flotilla-tui/src/cli/: tests.rs
crates/flotilla-tui/src/keymap/: tests.rs
crates/flotilla-tui/src/widgets/: action_menu.rs  base_view.rs  branch_input.rs  close_confirm.rs  columns.rs  command_palette.rs  help.rs  (+15 more)
crates/flotilla-tui/tests/: convoy_view_e2e.rs  high_fidelity.rs  snapshots.rs  test_fixtures.rs
(+460 files in other folders)
