[workspace]
members = [
    "crates/flotilla-core",
    "crates/flotilla-protocol",
    "crates/flotilla-daemon",
    "crates/flotilla-tui",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1.44"
indexmap = "2"
color-eyre = "0.6"

[package]
name = "flotilla"
version = "0.1.0"
edition = "2021"

[dependencies]
flotilla-core = { path = "crates/flotilla-core" }
flotilla-daemon = { path = "crates/flotilla-daemon" }
flotilla-tui = { path = "crates/flotilla-tui" }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tokio = { workspace = true }
color-eyre = { workspace = true }
clap = { version = "4", features = ["derive"] }
tui-input = "0.10"
tracing = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25.9"
libc = "0.2"
