[workspace]
members = [
    "crates/flotilla-client",
    "crates/flotilla-core",
    "crates/flotilla-protocol",
    "crates/flotilla-daemon",
    "crates/flotilla-tui",
]
exclude = ["lints/long_inline_paths"]
resolver = "2"

[workspace.package]
license = "Apache-2.0 OR MIT"

[workspace.metadata.dylint]
libraries = [{ path = "lints/long_inline_paths" }]

[workspace.dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tracing = "0.1.44"
indexmap = "2"
color-eyre = "0.6"

[package]
name = "flotilla"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
flotilla-core = { path = "crates/flotilla-core" }
flotilla-daemon = { path = "crates/flotilla-daemon" }
flotilla-protocol = { path = "crates/flotilla-protocol" }
flotilla-tui = { path = "crates/flotilla-tui" }
ratatui = "0.30"
tokio = { workspace = true }
color-eyre = { workspace = true }
clap = { version = "4", features = ["derive"] }
tracing = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
