[package]
name = "cleat"
version = "0.1.0"
edition = "2021"
license.workspace = true
build = "build.rs"

[features]
default = []
ghostty-vt = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
nix = { version = "0.31.2", features = ["fs", "poll", "process", "term"] }
sysinfo = "0.38"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
