[package]
name = "flotilla-client"
version = "0.1.0"
edition = "2021"

[dependencies]
flotilla-core = { path = "../flotilla-core" }
flotilla-protocol = { path = "../flotilla-protocol" }
tokio = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
libc = "0.2"
