[package]
name = "flotilla-controllers"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
flotilla-core = { path = "../flotilla-core" }
flotilla-protocol = { path = "../flotilla-protocol" }
flotilla-resources = { path = "../flotilla-resources" }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
bon = { workspace = true }
rstest = { workspace = true }
