[package]
name = "flotilla-core"
version = "0.1.0"
edition = "2021"

[features]
default = []
replay = []
test-support = []

[dependencies]
flotilla-protocol = { path = "../flotilla-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
indexmap = { workspace = true }
color-eyre = { workspace = true }
dirs = "6"
toml = "0.8"
reqwest = { version = "0.13.2", features = ["json"] }
http = "1"
bytes = "1"
minijinja = "2"
serde_yml = "0.0.12"
futures = "0.3"
urlencoding = "2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
gethostname = "1.1.0"
sysinfo = "0.38.4"
tokio-util = "0.7"
uuid = { version = "1", features = ["v4"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tempfile = "3"
