[package]
name = "flotilla-daemon"
version = "0.1.0"
edition = "2021"

[features]
default = []
skip-no-sandbox-tests = []

[dependencies]
flotilla-core = { path = "../flotilla-core" }
flotilla-protocol = { path = "../flotilla-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
flotilla-tui = { path = "../flotilla-tui" }
flotilla-protocol = { path = "../flotilla-protocol" }
