[package]
name = "flotilla-daemon"
version = "0.1.0"
edition = "2021"

[features]
default = []
skip-no-sandbox-tests = []

[dependencies]
flotilla-core = { path = "../flotilla-core" }
flotilla-protocol = { path = "../flotilla-protocol" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"

[dev-dependencies]
indexmap = { workspace = true }
tempfile = "3"
flotilla-client = { path = "../flotilla-client" }
flotilla-core = { path = "../flotilla-core", features = ["test-support"] }
flotilla-protocol = { path = "../flotilla-protocol" }
