[package]
name = "flotilla-daemon"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
skip-no-sandbox-tests = []
test-support = ["flotilla-protocol/test-support", "dep:flotilla-client"]

[dependencies]
flotilla-client = { path = "../flotilla-client", optional = true }
flotilla-core = { path = "../flotilla-core" }
flotilla-protocol = { path = "../flotilla-protocol" }
flotilla-transport = { path = "../flotilla-transport" }
tokio = { workspace = true }
tokio-util = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
visibility = "0.1.1"

[dev-dependencies]
indexmap = { workspace = true }
tempfile = "3"
flotilla-core = { path = "../flotilla-core", features = ["test-support"] }
flotilla-daemon = { path = ".", features = ["test-support"] }
flotilla-protocol = { path = "../flotilla-protocol", features = ["test-support"] }
