[package]
name = "flotilla-protocol"
version = "0.1.0"
edition = "2021"
license.workspace = true

[features]
default = []
test-support = []

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
gethostname = "1.1.0"
tracing = { workspace = true }
url = "2"
uuid = { version = "1", features = ["v4", "serde"] }
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
serde_yml = "0.0.12"
tokio = { version = "1", features = ["macros", "rt"] }
