[package]
name = "flotilla-session"
version = "0.1.0"
edition = "2021"
license.workspace = true

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
libc = "0.2"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
tempfile = "3"
