[package]
name = "flotilla-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
flotilla-core = { path = "../flotilla-core" }
flotilla-protocol = { path = "../flotilla-protocol" }
tokio = { workspace = true }
tracing = { workspace = true }
color-eyre = { workspace = true }
ratatui = "0.30"
crossterm = { version = "0.28", features = ["event-stream"] }
tui-input = "0.10"
ratatui-image = { version = "10.0.6", default-features = false, features = ["crossterm", "image-defaults"] }
image = "0.25.9"
unicode-width = "0.2.2"
dirs = "6"
tracing-subscriber = "0.3.22"
tracing-appender = "0.2.4"
time = { version = "0.3.47", features = ["local-offset"] }
futures = "0.3"
